# bhumi-bot

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
data/snapshots/: kurishev.json  matskevich.json  ponchik.json  shmit16.json  syntony.json  zamesin.json
data/snapshots/2023-04-11/: shmit.json
scripts/: launch.sh  launch_discord.sh  launch_distribute_stash.sh  launch_web.sh
src/: check_solana_logs.py  crypto.py  crypto_test.py  discord_payment.py  distribute_stash.py  drop_user_controller.py  get_commentators_list.py  main.py  mongo.py  photo_controller.py  settings.py  user_controller.py  video_mix_controller.py  wallet_controller.py  web.py
src/templates/: auth_template.html  video_mix.html  video_mix_list.html
